--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -16,6 +16,6 @@ body{
     margin-bottom: 15px;
   }
 
-.ng-invalid{
-    border: 1px solid red;
+input.ng-invalid.ng-touched{
+    border: 2px solid red;
 }
