--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -1,6 +1,6 @@
-<div class="card ">
-    <div class="shadow bg-black rounded p-3">
-  <canvas id="barChart" width="400" height="400"></canvas>
+<div class="card">
+    <div class="shadow bg-black rounded p-5">
+  <canvas id="barChart"></canvas>
   <p class="text-center">Projects - Services Provisoned in one time</p>
 </div>
 </div>
