--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,13 +1,7 @@
 <div class="fixed-bottom">
-<footer class="bg-dark text-white p-1" id="main-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col">
-            <p class="lead text-center">
-                Copyright &copy; <span id="year"></span> Dashboard
-              </p>
-        </div>
-      </div>
+<footer class="bg-dark text-white" id="main-footer">
+    <div class="container" style="height: 40px;">
+            <h6 class="lead text-center">Copyright &copy; Dashboard </h6>
     </div>
   </footer>
 </div>
