--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,51 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-2">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
   <div class="container">
-    <a href="home" class="navbar-brand"
-      ><img src="assets/img/etisalat.png"  alt="" height="50"/>
-      {{ product }}</a
-    >
+    <a href="home" class="navbar-brand dash-font" >
+      {{ product }}</a>
     <button
       class="navbar-toggler"
       data-toggle="collapse"
-      data-target="#navbarCollapse"
-    >
-      <span class="navbar-toggler-icon"></span>
+      data-target="#navbarCollapse">
+    <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item px-2">
-          <a href="elife" class="nav-link">{{ elife }}</a>
+          <a href="elife" class="nav-link dash-font">{{ elife }}</a>
         </li>
         <li class="nav-item px-2">
-          <a href="ucaas" class="nav-link">{{ ucaas }}</a>
+          <a href="ucaas" class="nav-link dash-font">{{ ucaas }}</a>
         </li>
         <li class="nav-item px-2">
-          <a href="vsaas" class="nav-link">{{ vsaas }}</a>
+          <a href="vsaas" class="nav-link dash-font">{{ vsaas }}</a>
         </li>
         <li class="nav-item px-2">
-          <a href="ucaas" class="nav-link ">{{ clean_pipe }}</a>
+          <a href="ucaas" class="nav-link dash-font">{{ clean_pipe }}</a>
         </li>
         <li class="nav-item px-2">
-          <a href="vsaas" class="nav-link">{{ ntcpe }}</a>
+          <a href="vsaas" class="nav-link dash-font">{{ ntcpe }}</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown mr-3">
-          <a
-            href="#"
-            class="nav-link dropdown-toggle active"
-            data-toggle="dropdown"
-          >
-            Environment
-          </a>
-          <div class="dropdown-menu">
-            <a href="home" class="dropdown-item ">Development </a>
-            <a href="home" class="dropdown-item ">Staging </a>
-            <a href="home" class="dropdown-item ">Production </a>
-          </div>
-        </li>
         <li class="nav-item">
-          <a routerLink="/" routerLinkActive="active" class="nav-link active">
+          <a routerLink="/" routerLinkActive="active" class="nav-link active dash-font">
             <i class="fas fa-user times"></i> Logout
           </a>
         </li>
