--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,13 +1,8 @@
-<div class="row">
-  <div class="col-md-6">
-    <app-chart></app-chart>
-  </div>
-  <div class="col-md-6">
-    <div class="card ">
-      <div class="shadow bg-black rounded p-3">
-          <canvas id="pieChart" width="400" height="400"></canvas>
+  <div class="col-lg-12">
+    <div class="card">
+      <div class="shadow bg-black rounded p-1">
+          <canvas id="pieChart"></canvas>
       <p class="text-center">Projects - Services(%) Provisoned in one time</p>
       </div>
     </div>
   </div>
-</div>
